--- a/demo/browser.html
+++ b/demo/browser.html
@@ -5,10 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,shrink-to-fit=no" />
   <meta name="format-detection" content="telephone=no,email=no" />
+  <link href="/qunit/qunit-2.6.2.css" rel="stylesheet" type="text/css" />
   <title>browser</title>
 </head>
 
 <body>
-<div id="result"></div>
+<div id="qunit"></div>
+<div id="qunit-fixture"></div>
+<script src="/qunit/qunit-2.6.2.js"></script>
 </body>
 </html>
