增加 hasMobileFeature 从特性角度检测是否移动设备

--- a/demo/browser.html
+++ b/demo/browser.html
@@ -11,6 +11,7 @@
 
 <body>
 <div id="is-mobile"></div>
+<div id="has-mobile-feature"></div>
 <div id="is-maxthon"></div>
 <div id="support-mse-h264"></div>
 </body>
